fix logo cropping

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #logo {
-  margin-top: -180px;
+  margin-top: -170px;
   margin-bottom: -180px;
 }
 
